# expo-gs1-syntax-engine

./: .npmignore  .prettierrc  NOTICE  README.md  changelog.md  eslint.config.cjs  expo-module.config.json  package-lock.json  package.json
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  readme.md
android/src/main/java/expo/modules/gs1syntaxengine/: ExpoGs1SyntaxEngineModule.kt  readme.md
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
package/android/src/main/c-lib/: gs1encoders-cpp-app.cpp
package/src/: ExpoGs1SyntaxEngine.types.ts
src/: ExpoGs1SyntaxEngine.types.ts  ExpoGs1SyntaxEngineModule.ts  ExpoGs1SyntaxEngineModule.web.ts  index.ts
